# klt

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
inc/: bmp_image.hpp  harris.hpp  i_image.hpp  image.hpp  image_helper.hpp  jpeg_image.hpp  klt.hpp  png_image.hpp
src/: bmp_image.cpp  harris.cpp  image.cpp  image_helper.cpp  jpeg_image.cpp  klt.cpp  png_image.cpp
test/: CMakeLists.txt  test.cpp
